--- a/style.css
+++ b/style.css
@@ -1,7 +1,14 @@
 body {
     background-color: lightblue;
+    /* flex: active; */
+    display: flex;
+    flex-direction: column;    
+    align-items: center;
+    justify-content: center;
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 20px;
 }
-
 h1 {
     color: navy;
     margin-left: 20px;
