--- a/style.css
+++ b/style.css
@@ -13,3 +13,15 @@ h1 {
     color: navy;
     margin-left: 20px;
 }
+generatebutton {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
