--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ h1 {
     color: navy;
     margin-left: 20px;
 }
-generatebutton {
+generateButton {
     background-color: #4CAF50; /* Green */
     border: none;
     color: white;
