--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ h1 {
 }
 #generateButton {
 
-    background-color: navy; /* Green */
+    background-color: navy; /* Navy */
     border: none;
     color: white;
     padding: 15px 32px;
