--- a/style.css
+++ b/style.css
@@ -19,9 +19,12 @@ h1 {
     border: none;
     color: white;
     padding: 15px 32px;
+    display:flex;
+    flex-direction:column
+align-items: center;
     text-align: center;
     text-decoration: none;
-    display: inline-block;
+    /* display: inline-block; */
     justify-content: center;
     font-size: 16px;
     margin: 4px 2px;
