--- a/style.css
+++ b/style.css
@@ -34,3 +34,9 @@ h1 {
     cursor: pointer;
     align-items: center;
 }
+.output {
+    margin-top: 20px;
+    width: 100%;
+    max-width: 600px;
+    text-align: center;
+}
