--- a/style.css
+++ b/style.css
@@ -40,3 +40,15 @@ h1 {
     max-width: 600px;
     text-align: center;
 }
+
+#clearButton {
+    background-color: red; /* Red */
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin-top: 10px;
+    cursor: pointer;
+}
