--- a/style.css
+++ b/style.css
@@ -52,3 +52,18 @@ h1 {
     margin-top: 10px;
     cursor: pointer;
 }
+
+#copyButton {
+    background-color: green; /* Green */
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin-top: 10px;
+    cursor: pointer;
+}
+#copyButton:hover {
+    background-color: darkgreen; /* Darker green on hover */
+}
