--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ h1 {
 }
 
 #clearButton {
-    background-color: red; /* Red */
+    background-color: rgb(0, 132, 255); /* Red */
     border: none;
     color: white;
     padding: 10px 20px;
