--- a/style.css
+++ b/style.css
@@ -54,9 +54,9 @@ h1 {
 }
 
 #copyButton {
-    background-color: rgb(0, 45, 128); /* Green */
+    background-color: rgb(223, 232, 247); /* Green */
     border: none;
-    color: white;
+    color: rgb(12, 12, 12);
     padding: 10px 20px;
     text-decoration: none;
     display: inline-block;
